2021-09-29  William Cohen  <wcohen@redhat.com>

	* riscv_init.c (riscv_return_value_location_lp64f): New function
	declaration.
	(riscv_return_value_location_lp64): Likewise.
	(riscv_init): Set return_value_location based on elf class and
	ehdr flags.
	* riscv_retval.c (riscv_return_value_location_lp64d): Renamed to...
	(riscv_return_value_location_lp64ifd): ...this. Handle single,
	double, float _Complex and double _Complex cases.
	(riscv_return_value_location_lp64d): New function.
	(riscv_return_value_location_lp64f): Likewise.

2021-04-19  Martin Liska  <mliska@suse.cz>

	* aarch64_symbol.c (aarch64_data_marker_symbol): Use startswith.
	* arm_symbol.c (arm_data_marker_symbol): Likewise.

2021-02-01  Érico Nogueira  <ericonr@disroot.org>

	* ppc_initreg.c: Also include <asm/ptrace.h>.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* aarch64_retval.c (aarch64_return_value_location): Fix spelling typo
	in comment.
	* ppc_cfi.c (ppc_abi_cfi): Likewise.

2020-11-17  Mark Wielard  <mark@klomp.org>

	* x86_64_symbol.c (x86_64_check_reloc_target_type): New function.
	* x86_64_init.c (x86_64_init): Hook check_reloc_target_type.

2020-10-19  Mark Wielard  <mark@klomp.org>

	* Makefile.am (modules): Remove tilegx.
	(tilegx_SRCS): Removed.
	(libebl_backends_a_SOURCES): Remove tilegx_SRCS.
	* tilegx_corenote.c: Removed.
	* tilegx_init.c: Removed.
	* tilegx_regs.c: Removed.
	* tilegx_reloc.def: Removed.
	* tilegx_retval.c: Removed.
	* tilegx_symbol.c: Removed.

2020-10-19  Mark Wielard  <mark@klomp.org>

	* Makefile.am (i386_SRCS): Remove i386_syscall.c.
	(x86_64_SRCS): Remove x86_64_syscall.c.
	(ppc_SRCS): Remove ppc_syscall.c.
	* i386_init.c (i386_init): Remove syscall_abi HOOK.
	* i386_syscall.c: Delete.
	* ppc64_init.c (ppc64_init): Remove syscall_abi HOOK.
	* ppc_syscall.c: Delete.
	* x86_64_init.c (x86_64_init): Remove syscall_abi HOOK.
	* x86_64_syscall.c: Delete.

2020-08-28  Mark Wielard  <mark@klomp.org>
